# aic

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
ai_commit/: __init__.py  app.py  cli.py
